--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
 
 		<commons-lang.version>2.6</commons-lang.version>
 		<commons-io.version>2.5</commons-io.version>
+		<commons-codec.version>1.3</commons-codec.version>
 
 		<asm-all.version>3.1</asm-all.version>
 		<btrace-client.version>1.2.3</btrace-client.version>
@@ -124,6 +125,11 @@
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
 				<version>${commons-io.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-codec</artifactId>
+				<version>${commons-codec.version}</version>
 			</dependency>
 
 			<dependency>
